// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Form/InputGroup/GroupText display a group text of size large 1`] = `
".a {
  display: flex;
}
.b {
  align-items: center;
}
.c {
  font-size: 1.25rem;
}
.d {
  font-weight: 400;
}
.e {
  line-height: 1.5;
}
.f {
  color: #212529;
}
.g {
  text-align: center;
}
.h {
  white-space: nowrap;
}
.i {
  background-color: #f8f9fa;
}
.j {
  border-top-left-radius: 0.5rem;
}
.k {
  border-top-right-radius: 0.5rem;
}
.l {
  border-bottom-right-radius: 0.5rem;
}
.m {
  border-bottom-left-radius: 0.5rem;
}
.n {
  border-top-width: 1px;
}
.o {
  border-right-width: 1px;
}
.p {
  border-bottom-width: 1px;
}
.q {
  border-left-width: 1px;
}
.r {
  border-top-style: solid;
}
.s {
  border-right-style: solid;
}
.t {
  border-bottom-style: solid;
}
.u {
  border-left-style: solid;
}
.v {
  border-top-color: #dee2e6;
}
.w {
  border-right-color: #dee2e6;
}
.x {
  border-bottom-color: #dee2e6;
}
.y {
  border-left-color: #dee2e6;
}
.z {
  padding-top: 0.5rem;
}
.ab {
  padding-right: 1rem;
}
.ac {
  padding-bottom: 0.5rem;
}
.ae {
  padding-left: 1rem;
}


<span
  data-testid="input-group-text"
  class="a ab ac ae b c d e f g h i j k l m n o p q r s t u v w x y z input-group-text"
  >Group Text</span
>;
"
`;

exports[`components/Form/InputGroup/GroupText display a group text of size medium 1`] = `
".a {
  display: flex;
}
.b {
  align-items: center;
}
.c {
  font-size: 1rem;
}
.d {
  font-weight: 400;
}
.e {
  line-height: 1.5;
}
.f {
  color: #212529;
}
.g {
  text-align: center;
}
.h {
  white-space: nowrap;
}
.i {
  background-color: #f8f9fa;
}
.j {
  border-top-left-radius: 0.375rem;
}
.k {
  border-top-right-radius: 0.375rem;
}
.l {
  border-bottom-right-radius: 0.375rem;
}
.m {
  border-bottom-left-radius: 0.375rem;
}
.n {
  border-top-width: 1px;
}
.o {
  border-right-width: 1px;
}
.p {
  border-bottom-width: 1px;
}
.q {
  border-left-width: 1px;
}
.r {
  border-top-style: solid;
}
.s {
  border-right-style: solid;
}
.t {
  border-bottom-style: solid;
}
.u {
  border-left-style: solid;
}
.v {
  border-top-color: #dee2e6;
}
.w {
  border-right-color: #dee2e6;
}
.x {
  border-bottom-color: #dee2e6;
}
.y {
  border-left-color: #dee2e6;
}
.z {
  padding-top: 0.375rem;
}
.ab {
  padding-right: 0.75rem;
}
.ac {
  padding-bottom: 0.375rem;
}
.ae {
  padding-left: 0.75rem;
}


<span
  data-testid="input-group-text"
  class="a ab ac ae b c d e f g h i j k l m n o p q r s t u v w x y z input-group-text"
  >Group Text</span
>;
"
`;

exports[`components/Form/InputGroup/GroupText display a group text of size small 1`] = `
".a {
  display: flex;
}
.b {
  align-items: center;
}
.c {
  font-size: 0.875rem;
}
.d {
  font-weight: 400;
}
.e {
  line-height: 1.5;
}
.f {
  color: #212529;
}
.g {
  text-align: center;
}
.h {
  white-space: nowrap;
}
.i {
  background-color: #f8f9fa;
}
.j {
  border-top-left-radius: 0.25rem;
}
.k {
  border-top-right-radius: 0.25rem;
}
.l {
  border-bottom-right-radius: 0.25rem;
}
.m {
  border-bottom-left-radius: 0.25rem;
}
.n {
  border-top-width: 1px;
}
.o {
  border-right-width: 1px;
}
.p {
  border-bottom-width: 1px;
}
.q {
  border-left-width: 1px;
}
.r {
  border-top-style: solid;
}
.s {
  border-right-style: solid;
}
.t {
  border-bottom-style: solid;
}
.u {
  border-left-style: solid;
}
.v {
  border-top-color: #dee2e6;
}
.w {
  border-right-color: #dee2e6;
}
.x {
  border-bottom-color: #dee2e6;
}
.y {
  border-left-color: #dee2e6;
}
.z {
  padding-top: 0.25rem;
}
.ab {
  padding-right: 0.5rem;
}
.ac {
  padding-bottom: 0.25rem;
}
.ae {
  padding-left: 0.5rem;
}


<span
  data-testid="input-group-text"
  class="a ab ac ae b c d e f g h i j k l m n o p q r s t u v w x y z input-group-text"
  >Group Text</span
>;
"
`;

exports[`components/Form/InputGroup/GroupText displays the default group text 1`] = `
".a {
  display: flex;
}
.b {
  align-items: center;
}
.c {
  font-size: 1rem;
}
.d {
  font-weight: 400;
}
.e {
  line-height: 1.5;
}
.f {
  color: #212529;
}
.g {
  text-align: center;
}
.h {
  white-space: nowrap;
}
.i {
  background-color: #f8f9fa;
}
.j {
  border-top-left-radius: 0.375rem;
}
.k {
  border-top-right-radius: 0.375rem;
}
.l {
  border-bottom-right-radius: 0.375rem;
}
.m {
  border-bottom-left-radius: 0.375rem;
}
.n {
  border-top-width: 1px;
}
.o {
  border-right-width: 1px;
}
.p {
  border-bottom-width: 1px;
}
.q {
  border-left-width: 1px;
}
.r {
  border-top-style: solid;
}
.s {
  border-right-style: solid;
}
.t {
  border-bottom-style: solid;
}
.u {
  border-left-style: solid;
}
.v {
  border-top-color: #dee2e6;
}
.w {
  border-right-color: #dee2e6;
}
.x {
  border-bottom-color: #dee2e6;
}
.y {
  border-left-color: #dee2e6;
}
.z {
  padding-top: 0.375rem;
}
.ab {
  padding-right: 0.75rem;
}
.ac {
  padding-bottom: 0.375rem;
}
.ae {
  padding-left: 0.75rem;
}


<span
  data-testid="input-group-text"
  class="a ab ac ae b c d e f g h i j k l m n o p q r s t u v w x y z input-group-text"
  >Group Text</span
>;;
"
`;
